page lista de produtos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Al-Mosso Bootstrap Template - Index</title>
+  <title>Al-Mosso - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -317,6 +317,7 @@
                 </a>
               </div><!-- Menu Item -->
 
+              <!-- 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
                 <h4>Eos Luibusdam</h4>
@@ -329,7 +330,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
@@ -343,7 +344,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
@@ -357,7 +358,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>--> 
 
             </div>
           </div><!-- End Starter Menu Content -->
@@ -411,8 +412,9 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
+              <!-- 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
                 <h4>Eos Luibusdam</h4>
@@ -425,7 +427,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
@@ -439,7 +441,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
@@ -453,7 +455,8 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
+                    -->
 
             </div>
           </div><!-- End Breakfast Menu Content -->
@@ -507,8 +510,9 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
+              <!-- 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
                 <h4>Eos Luibusdam</h4>
@@ -521,7 +525,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
@@ -535,7 +539,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
@@ -549,7 +553,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div> -->
 
             </div>
           </div><!-- End Lunch Menu Content -->
@@ -603,8 +607,9 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
+              <!--
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
                 <h4>Eos Luibusdam</h4>
@@ -617,7 +622,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
@@ -631,7 +636,7 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div>
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
@@ -645,15 +650,15 @@
                 <a href="/detail.html">
                   Ver item
                 </a>
-              </div><!-- Menu Item -->
+              </div> -->
 
             </div>
           </div><!-- End Dinner Menu Content -->
-
         </div>
-
       </div>
-    </section><!-- End Menu Section -->
+      <div><button class="btn_separado aos-init aos-animate" data-aos="fade-up" data-aos-delay="150" onclick="window.location.href='produtos.html'"">Ver mais</button></div>
+    </section>
+    <!-- End Menu Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <!--
@@ -770,7 +775,6 @@
           <!-- </div>
           <div class="swiper-pagination"></div>
         </div>
-
       </div>
     </section>End Testimonials Section -->
     <!-- ======= Events Section ======= -->
