--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#menu">Menu</a></li>
-          <li><a href="#events">Eventos</a></li>
           <li><a href="#chefs">Chefs</a></li>
          
           <li><a href="#contact">Contato</a></li>
@@ -276,10 +275,10 @@
             <div class="row gy-5">
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Magnam Tiste</h4>
+                <a href="assets/img/menu/Shakshuka.png" class="glightbox"><img src="assets/img/menu/Shakshuka.png" class="menu-img img-fluid" alt=""></a>
+                <h4>Shakshuka</h4>
                 <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
+                  Prato tradicional do Oriente Médio e do Norte da África, feito com ovos pochê em um molho de tomate temperado com especiarias como pimenta, cominho e páprica, geralmente acompanhado de pimentões e cebolas.
                 </p>
                 <p class="price">
                   $5.95
@@ -290,10 +289,10 @@
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Aut Luia</h4>
+                <a href="assets/img/menu/Babaganush.png" class="glightbox"><img src="assets/img/menu/Babaganush.png" class="menu-img img-fluid" alt=""></a>
+                <h4>Babaganush</h4>
                 <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
+                  Prato à base de berinjela assada, misturada com tahine, alho, limão e azeite de oliva, resultando em uma pasta cremosa e saborosa, comum na culinária do Oriente Médio.
                 </p>
                 <p class="price">
                   $14.95
@@ -304,10 +303,10 @@
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Est Eligendi</h4>
+                <a href="assets/img/menu/Mujadara.png" class="glightbox"><img src="assets/img/menu/Mujadara.png" class="menu-img img-fluid" alt=""></a>
+                <h4>Mujadara</h4>
                 <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
+                  Prato tradicional do Oriente Médio feito com arroz, lentilhas e cebolas caramelizadas, geralmente temperado com cominho e servido como acompanhamento ou prato principal.
                 </p>
                 <p class="price">
                   $8.95
@@ -778,47 +777,6 @@
       </div>
     </section>End Testimonials Section -->
     <!-- ======= Events Section ======= -->
-    <section id="events" class="events">
-      <div class="container-fluid" data-aos="fade-up">
-
-        <div class="section-header">
-          <h2>الأحداث</h2>
-          <p>Compartilhe <span>seus momentos</span> no Al-Mosso</p>
-        </div>
-
-        <div class="slides-3 swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide event-item d-flex flex-column justify-content-end" style="background-image: url(assets/img/events-1.jpg)">
-              <h3>Custom Parties</h3>
-              <div class="price align-self-start">$99</div>
-              <p class="description">
-                Quo corporis voluptas ea ad. Consectetur inventore sapiente ipsum voluptas eos omnis facere. Enim facilis veritatis id est rem repudiandae nulla expedita quas.
-              </p>
-            </div><!-- End Event item -->
-
-            <div class="swiper-slide event-item d-flex flex-column justify-content-end" style="background-image: url(assets/img/events-2.jpg)">
-              <h3>Private Parties</h3>
-              <div class="price align-self-start">$289</div>
-              <p class="description">
-                In delectus sint qui et enim. Et ab repudiandae inventore quaerat doloribus. Facere nemo vero est ut dolores ea assumenda et. Delectus saepe accusamus aspernatur.
-              </p>
-            </div><!-- End Event item -->
-
-            <div class="swiper-slide event-item d-flex flex-column justify-content-end" style="background-image: url(assets/img/events-3.jpg)">
-              <h3>Birthday Parties</h3>
-              <div class="price align-self-start">$499</div>
-              <p class="description">
-                Laborum aperiam atque omnis minus omnis est qui assumenda quos. Quis id sit quibusdam. Esse quisquam ducimus officia ipsum ut quibusdam maxime. Non enim perspiciatis.
-              </p>
-            </div><!-- End Event item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Events Section -->
 
     <!-- ======= Chefs Section ======= -->
     <section id="chefs" class="chefs section-bg">
