--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Why Us Section ======= -->
-    <!-- <section id="why-us" class="why-us section-bg">
+    <section id="why-us" class="why-us section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="row gy-4">
@@ -160,7 +160,7 @@
                 </div>
               </div> -->
               <!-- End Icon Box -->
-<!-- 
+
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-gem"></i>
@@ -169,7 +169,7 @@
                 </div>
               </div> -->
               <!-- End Icon Box -->
-<!-- 
+
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-inboxes"></i>
@@ -178,14 +178,14 @@
                 </div>
               </div> -->
               <!-- End Icon Box -->
-<!-- 
+
             </div>
           </div>
 
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Why Us Section -->
 
     <!-- ======= Stats Counter Section ======= -->
