--- a/index.html
+++ b/index.html
@@ -137,46 +137,48 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="why-box">
-              <h3>Why Choose Al-Mosso?</h3>
+              <h3>Por que escolher o Al-Mosso?</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+                Grandes jogadores da árabia, quando vem ao Brasil, passam em Belford Roxo para comer e degustar a comída típica árabe no Al-Mosso.
+                Veja alguns depoimentos:
               </p>
               <div class="text-center">
                 <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- End Why Box -->
-<!-- 
+
           <div class="col-lg-8 d-flex align-items-center">
             <div class="row gy-4">
 
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-clipboard-data"></i>
-                  <h4>Corporis voluptates officia eiusmod</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>Cristiano Ronaldo</h4>
+                  <p>Bom demais! Sempre venho a esse incrível lugar para me sentir no Al-Nassr. Siiiiu</p>
                 </div>
-              </div> -->
+              </div>
               <!-- End Icon Box -->
 
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-gem"></i>
-                  <h4>Ullamco laboris ladore pan</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Neymar Jr</h4>
+                  <p>Meu lugar preferido para comer com a família!</p>
                 </div>
-              </div> -->
+              </div>
+              
               <!-- End Icon Box -->
 
-              <div class="col-xl-4" data-aos="fade-up" data-aos-delay="400">
+            <!--  <div class="col-xl-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-inboxes"></i>
                   <h4>Labore consequatur incidid dolore</h4>
                   <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
                 </div>
               </div> -->
+              
               <!-- End Icon Box -->
 
             </div>
