--- a/detalhes-reserva2.html
+++ b/detalhes-reserva2.html
@@ -170,7 +170,7 @@
                     <div role="tablist" class="dots"></div>
                 </div>
 
-                <a href="#" class="back-button">Ver outra Reserva</a>
+                <a href="/login-form/login-al-mosso.html" class="back-button">Ver outra Reserva</a>
 
 
                 <button class="btn btn-secondary" onclick="editarReserva()">Editar Reserva</button>
