--- a/detail.html
+++ b/detail.html
@@ -51,12 +51,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#menu">Menu</a></li>
-          <li><a href="#chefs">Chefs</a></li>
-         
-          <li><a href="#contact">Contato</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/#about">Sobre</a></li>
+          <li><a href="/#menu">Menu</a></li>
+          <li><a href="/#chefs">Chefs</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>         
+          <li><a href="/#contact">Contato</a></li>
         </ul>
       </nav><!-- .navbar -->
 
